--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 blinker==1.9.0
 click==8.1.8
-Flask==3.1.0
+Flask==2.2.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
-mysql-connector-python==9.2.0
-pygame==2.6.1
+mysqlclient==2.1.1
 Werkzeug==3.1.3
